[package]
name = "wcore-channel-email"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Email (SMTP outbound + IMAP inbound) channel adapter for Genesis-Core"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
imap = { version = "2" }
native-tls = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
toml = { workspace = true }
tracing = { workspace = true }

wcore-channels = { workspace = true }
wcore-config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
