[package]
name = "wcore-channel-imessage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iMessage channel adapter for Genesis-Core — macOS-only, AppleScript bridge via osascript subprocess"

[target.'cfg(target_os = "macos")'.dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "process", "time"] }
toml = { workspace = true }
tracing = { workspace = true }

wcore-channels = { workspace = true }
wcore-config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
