[package]
name = "wcore-channel-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "signal-cli subprocess channel adapter for wcore-channels — JSON-RPC over stdio"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "io-util", "process", "time"] }
toml = { workspace = true }
tracing = { workspace = true }

wcore-channels = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "io-util", "sync"] }
tempfile.workspace = true
