[package]
name = "wcore-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel runtime — trait + lifecycle for chat platform adapters in Genesis-Core"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
wcore-config = { path = "../wcore-config" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
